--- a/episodes.html
+++ b/episodes.html
@@ -29,7 +29,7 @@
 				<li class="nav-item">
 					<a class="nav-link" href="actors.html">ACTORS</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item active">
 					<a class="nav-link" href="episodes.html">SEASONS</a>
 				</li>
 				<li class="nav-item">
