--- a/characters.html
+++ b/characters.html
@@ -32,7 +32,7 @@
 				<li class="nav-item">
 					<a class="nav-link" href="episodes.html">SEASONS</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item active">
 					<a class="nav-link" href="characters.html">CHARACTERS</a>
 				</li>
 			</ul>
