--- a/creator.html
+++ b/creator.html
@@ -23,7 +23,7 @@
 				<li class="nav-item">
 					<a class="nav-link" href="index.html">HOME</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item active">
 					<a class="nav-link" href="creator.html">CREATORS</a>
 				</li>
 				<li class="nav-item">
