--- a/index.html
+++ b/index.html
@@ -97,7 +97,24 @@
 			<label for="exampleFormControlTextarea1">Add your comment</label>
 			<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 		</div>
-		<button type="submit" class="btn btn-primary button">Submit</button>
+		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+			Launch demo modal
+		</button>
+			<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="exampleModalLabel">Registration</h5>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">
+							¡You registered successfully!
+						</div>
+					</div>
+				</div>
+			</div>
 	</form>
 	<footer class="footer-content">
 		<div class="footer-content__copyright">Copyright 2021© | F.R.I.E.N.D.S
