--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 		</div>
 		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-			Launch demo modal
+			Submit
 		</button>
 			<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
